manifests/helloweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
  labels:
    app: hello
spec:
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
      - name: gke-nodeapp
        image: us-west1-docker.pkg.dev/daring-pilot-334612/nodeapp-repo/webapp-image:v1.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
        volumeMounts:
          - name: tls
            mountPath: /etc/tls
            readOnly: true
      volumes:
      - name: tls
        secret:
          secretName: yourdomain2-tls
